Separador de unidades y decimales en cantidades.

--- a/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
@@ -157,7 +157,7 @@
     <td colspan="2">PUESTOS: {{ extra_cliente.num_puestos }}</td>
   </tr>
   <tr>
-    <td colspan="2">SUMA ASEGURADA: {{ conductor.valor }}</td>
+    <td colspan="2">SUMA ASEGURADA: {{ valor_sum }}</td>
     <td colspan="6" style="font-size:8px; margin-left: 10px;">Cualquier pérdida Total bajo los riesgos D, E, F y G serán pagados de acuerdo al interés que resulte tener el asegurado y acreedor hipotecario.</td>
   </tr>
   <tr style="height: 100%; ">
@@ -196,7 +196,7 @@
     <td colspan="3">COBERTURA D - OTROS RIESGOS</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td colspan="1" style="text-align: center;">{{ conductor.valor }}</td>
+    <td colspan="1" style="text-align: center;">{{ valor_sum }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.otros_danios|floatformat:0|intcomma }}</td>
     <td style="text-align: center;">{{ solicitud.cotizacion.prima_otrosDanios|floatformat:2|intcomma }}</td>
   </tr>
@@ -204,7 +204,7 @@
     <td colspan="3">COBERTURA E - COLISIÓN O VUELCO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td colspan="1" style="text-align: center;">{{ conductor.valor }}</td>
+    <td colspan="1" style="text-align: center;">{{ valor_sum }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.colision_vuelco|floatformat:0|intcomma }}</td>
     <td style="text-align: center;">{{ solicitud.cotizacion.prima_colisionVuelco|floatformat:2|intcomma }}</td>
   </tr>
@@ -212,7 +212,7 @@
     <td colspan="3">COBERTURA F - INCENDIO Y RAYO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td style="text-align: center;">{{ conductor.valor }}</td>
+    <td style="text-align: center;">{{ valor_sum }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.incendio_rayo|floatformat:0|intcomma }}</td>
     <td colspan="1" style="text-align: center;">.00</td>
   </tr>
@@ -220,7 +220,7 @@
     <td colspan="3">COBERTURA G - ROBO O HURTO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td style="text-align: center;">{{ conductor.valor }}</td>
+    <td style="text-align: center;">{{ valor_sum }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.robo_hurto|floatformat:0|intcomma }}</td>
     <td colspan="1" style="text-align: center;">.00</td>
   </tr>
@@ -239,13 +239,13 @@
   {% if solicitud.cotizacion.preferencial_plus %}
   <tr style="height: 40; ">
     <td colspan="7">{{ endoso }} </td>
-    <td style="text-align: center;">{{solicitud.cotizacion.endoso.precio}}</td>
+    <td style="text-align: center;">{{solicitud.cotizacion.endoso.precio|floatformat:2|intcomma}}</td>
   </tr>
   {% endif %}
   {% if solicitud.cotizacion.importacion_piezas %}
   <tr style="height: 40; ">
     <td colspan="7">IMPORTACIÓN DE PIEZAS </td>
-    <td style="text-align: center;">{{solicitud.cotizacion.prima_importacion }}</td>
+    <td style="text-align: center;">{{ solicitud.cotizacion.prima_importacion|floatformat:2|intcomma }}</td>
   </tr>
   {% endif %}
   {% if not solicitud.cotizacion.importacion_piezas %}
@@ -257,7 +257,7 @@
     <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px;">EMISIÓN PÓLIZA NUEVA<br>Conductor(es):<br>{{solicitud.nombre_conductor}}&nbsp;{{solicitud.id_conductor}}<br>{{solicitud.nombre_conductor2}}&nbsp;{{solicitud.id_conductor2}}<br>{{solicitud.nombre_conductor3}}&nbsp;{{solicitud.id_conductor3}}<br></td>
     <td colspan="2" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; margin-left: 10px;"><b>SUB-TOTAL:</b><br><b>DESCUENTO ADICIONAL:</b><br>OTROS CARGOS:<br><b>SUB-TOTAL A PAGAR:</b><br>IMPUESTO %: &nbsp;&nbsp;6.00<br><b>TOTAL A PAGAR:</b></td>
     <td colspan="1" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; text-align: right;">B/.<br>B/.<br>B/.<br>B/.<br>&nbsp; B/.<br>B/.</td>
-    <td colspan="1" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; text-align: right;">{{ solicitud.cotizacion.subtotal|floatformat:2|intcomma }}<br>{{ descuento|floatformat:2|intcomma }}<br>.00<br>{{ subtotal|floatformat:2|intcomma }}<br>{{ impuestos }}<br>{{ total }}</td>
+    <td colspan="1" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; text-align: right;">{{ solicitud.cotizacion.subtotal|floatformat:2|intcomma }}<br>{{ descuento|floatformat:2|intcomma }}<br>.00<br>{{ subtotal|floatformat:2|intcomma }}<br>{{ impuestos|floatformat:2|intcomma }}<br>{{ total|floatformat:2|intcomma }}</td>
   </tr>
 
 
@@ -393,7 +393,7 @@
     <td colspan="2">PUESTOS: {{ extra_cliente.num_puestos }}</td>
   </tr>
   <tr>
-    <td colspan="2">SUMA ASEGURADA: {{ conductor.valor }}</td>
+    <td colspan="2">SUMA ASEGURADA: {{ valor_sum }}</td>
     <td colspan="6" style="font-size:8px; margin-left: 10px;">Cualquier pérdida Total bajo los riesgos D, E, F y G serán pagados de acuerdo al interés que resulte tener el asegurado y acreedor hipotecario.</td>
   </tr>
   <tr style="height: 100%; ">
@@ -432,7 +432,7 @@
     <td colspan="3">COBERTURA D - OTROS RIESGOS</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td colspan="1" style="text-align: center;">{{ conductor.valor }}</td>
+    <td colspan="1" style="text-align: center;">{{ valor_sum }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.otros_danios|floatformat:0|intcomma }}</td>
     <td style="text-align: center;">{{ solicitud.cotizacion.prima_otrosDanios|floatformat:2|intcomma }}</td>
   </tr>
@@ -440,7 +440,7 @@
     <td colspan="3">COBERTURA E - COLISIÓN O VUELCO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td colspan="1" style="text-align: center;">{{ conductor.valor }}</td>
+    <td colspan="1" style="text-align: center;">{{ valor_sum }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.colision_vuelco|floatformat:0|intcomma }}</td>
     <td style="text-align: center;">{{ solicitud.cotizacion.prima_colisionVuelco|floatformat:2|intcomma }}</td>
   </tr>
@@ -448,7 +448,7 @@
     <td colspan="3">COBERTURA F - INCENDIO Y RAYO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td style="text-align: center;">{{ conductor.valor }}</td>
+    <td style="text-align: center;">{{ valor_sum }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.incendio_rayo|floatformat:0|intcomma }}</td>
     <td colspan="1" style="text-align: center;">.00</td>
   </tr>
@@ -456,7 +456,7 @@
     <td colspan="3">COBERTURA G - ROBO O HURTO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td style="text-align: center;">{{ conductor.valor }}</td>
+    <td style="text-align: center;">{{ valor_sum }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.robo_hurto|floatformat:0|intcomma }}</td>
     <td colspan="1" style="text-align: center;">.00</td>
   </tr>
@@ -475,13 +475,13 @@
   {% if solicitud.cotizacion.preferencial_plus %}
   <tr style="height: 40; ">
     <td colspan="7">{{ endoso }} </td>
-    <td style="text-align: center;">{{solicitud.cotizacion.endoso.precio}}</td>
+    <td style="text-align: center;">{{ solicitud.cotizacion.endoso.precio|floatformat:2|intcomma }}</td>
   </tr>
   {% endif %}
   {% if solicitud.cotizacion.importacion_piezas %}
   <tr style="height: 40; ">
     <td colspan="7">IMPORTACIÓN DE PIEZAS </td>
-    <td style="text-align: center;">{{solicitud.cotizacion.prima_importacion }}</td>
+    <td style="text-align: center;">{{ solicitud.cotizacion.prima_importacion|floatformat:2|intcomma }}</td>
   </tr>
   {% endif %}
   {% if not solicitud.cotizacion.importacion_piezas %}
@@ -493,7 +493,7 @@
     <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px;">EMISIÓN PÓLIZA NUEVA<br>Conductor(es):<br>{{solicitud.nombre_conductor}}&nbsp;{{solicitud.id_conductor}}<br>{{solicitud.nombre_conductor2}}&nbsp;{{solicitud.id_conductor2}}<br>{{solicitud.nombre_conductor3}}&nbsp;{{solicitud.id_conductor3}}<br></td>
     <td colspan="2" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; margin-left: 10px;"><b>SUB-TOTAL:</b><br><b>DESCUENTO ADICIONAL:</b><br>OTROS CARGOS:<br><b>SUB-TOTAL A PAGAR:</b><br>IMPUESTO %: &nbsp;&nbsp;6.00<br><b>TOTAL A PAGAR:</b></td>
     <td colspan="1" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; text-align: right;">B/.<br>B/.<br>B/.<br>B/.<br>&nbsp; B/.<br>B/.</td>
-    <td colspan="1" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; text-align: right;">{{ solicitud.cotizacion.subtotal|floatformat:2|intcomma }}<br>{{ descuento|floatformat:2|intcomma }}<br>.00<br>{{ subtotal|floatformat:2|intcomma }}<br>{{ impuestos }}<br>{{ total }}</td>
+    <td colspan="1" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; text-align: right;">{{ solicitud.cotizacion.subtotal|floatformat:2|intcomma }}<br>{{ descuento|floatformat:2|intcomma }}<br>.00<br>{{ subtotal|floatformat:2|intcomma }}<br>{{ impuestos|floatformat:2|intcomma }}<br>{{ total|floatformat:2|intcomma }}</td>
   </tr>
 
 
